k8s/deepstack/deepstack-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deepstack-service
  namespace: deepstack
spec:
  ports:
    - port: 5000
  selector:
    app: deepstack
